--- a/my-app/src/components/Card/Card.css
+++ b/my-app/src/components/Card/Card.css
@@ -1,7 +1,10 @@
-/* .card {
-    width: 200px;
-    height: 150px;
-    margin: 15px 45px;
+.card {
+    background: #fff;
+    border-radius: 2px;
+    height: 250px;
+    margin: 1rem;
+    position: relative;
+    width: 325px;
     box-shadow: 0 3px 6px #999, 0 3px 6px #999;
-    border: 3px solid white;
-  } */
+    text-align: left;
+  }
